feat: add a simple token based user management
